// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`get-reporting returns a 400 error when segmentId is omitted despite being marked optional 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "Bad Request",
    "status": 400,
  },
}
`;

exports[`get-reporting returns reporting rows for a non-existent segmentId 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
  },
}
`;
